; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_wmv2dsp.c_put_mspel8_mc22_c.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_wmv2dsp.c_put_mspel8_mc22_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32)* @put_mspel8_mc22_c to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_mspel8_mc22_c(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [88 x i32], align 16
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = getelementptr inbounds [88 x i32], [88 x i32]* %7, i64 0, i64 0
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = sext i32 %10 to i64
  %12 = sub i64 0, %11
  %13 = getelementptr inbounds i32, i32* %9, i64 %12
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @wmv2_mspel8_h_lowpass(i32* %8, i32* %13, i32 8, i32 %14, i32 11)
  %16 = load i32*, i32** %4, align 8
  %17 = getelementptr inbounds [88 x i32], [88 x i32]* %7, i64 0, i64 0
  %18 = getelementptr inbounds i32, i32* %17, i64 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @wmv2_mspel8_v_lowpass(i32* %16, i32* %18, i32 %19, i32 8, i32 8)
  ret void
}

declare dso_local i32 @wmv2_mspel8_h_lowpass(i32*, i32*, i32, i32, i32) #1

declare dso_local i32 @wmv2_mspel8_v_lowpass(i32*, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
